--- a/frontend-food/src/app/components/pages/food-page/food-page.component.html
+++ b/frontend-food/src/app/components/pages/food-page/food-page.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<app-non-found [visible]="!food.id" notFoundMessage="Back To Homepage"></app-non-found>
+
+<div class="container" *ngIf="food.id">
   <img [src]="food.imageUrl" [alt]="food.name">
 
   <div class="details">
