--- a/frontend-food/src/app/components/pages/home/home.component.html
+++ b/frontend-food/src/app/components/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <app-search></app-search>
 <app-tags></app-tags>
+<app-non-found [visible]="!foods || !foods.length" notFoundMessage="Reset Search"></app-non-found>
 <ul>
   <li *ngFor="let food of foods">
     <a routerLink="/food/{{food.id}}">
